# tactical_edge_ai_challenge

./: README.md  pyproject.toml  requirements.txt  run_demo.py
cloud_setup/: setup_cloud_repo.ipynb  setup_repo.ipynb
data/: download_data.sh
model/: setup_model.sh
prototype/: prompt_template.py
utils/: prompt_template.py
