[tool.poetry]
name = "tactical-edge-ai-challenge"
version = "0.1.0"
description = ""
authors = ["Jeremy de Gail"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.13"
pandas = "^2.2.1"
loguru = "^0.7.2"
transformers = "^4.39.0"
gradio = "4.21"
pypdf = "^4.1.0"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
